# sentiment-analysis

./: README.md  docker-compose.yml  pyproject.toml
app/: config.py  (+1 more)
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sentiment-analysis.postman_collection.json
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 988447c399f9_update_schema_to_follow_data_oriented_.py  a80765f471db_create_reviews_company_name.py  c2f80918dd44_create_companies_table_and_partition_.py  cb7e78a5441c_add_index_to_company_id_classified_at.py  de9f928c71ae_initial_schema.py  e80f03bb2a49_auto_partition_creation.py
backend/app/: __init__.py  config.py  main.py  prometheus.py
backend/app/api/: __init__.py  responses.py  reviews.py
backend/app/core/: core.py  publisher.py
backend/app/db/: __init__.py  customer_repository.py  review_repository.py  session.py
backend/app/db/schemas/: customer.py  review.py
backend/app/models/: customer.py  review.py
backend/app/utils/: decorators.py  logger.py  metrics.py  metrics_route.py  prometheus_labels.py
backend/tests/: conftest.py  test_db.py
consumer/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  worker.py  worker2.py
consumer/app/: __init__.py  config.py  tasks.py
consumer/app/core/: __init__.py  client_rabbitmq.py  core.py  process_many_reviews.py  process_single_review.py
consumer/app/db/: review_repository.py
consumer/app/db/schemas/: company.py  customer.py  review.py
consumer/app/ml_models/: sentiment_analysis.py
consumer/app/utils/: logger.py
(+9 files in other folders)
