[project]
name = "sentiment-analysis-backend"
version = "0.1.0"
description = "Server - Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "sqlmodel>=0.0.22",
    "aio-pika>=9.5.4",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    "celery>=5.4.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.5"]
