[project]
name = "sentiment-analysis-consumer"
version = "0.1.0"
description = "Consumer - Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aio-pika>=9.5.4",
    "celery>=5.4.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.4",
    "pysentimiento>=0.7.3",
    "rabbitmq>=0.2.0",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = ["ruff>=0.9.5"]
